chore(workflow): 更新release工作流中的artifact名称
- 将发布流程中上传的打包文件名从geeksaver-*更改为gofileserver-*

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,6 +58,6 @@ jobs:
           # release title
           name: Release ${{ github.ref_name }}
           # 上传打包后的文件
-          artifacts: dist/geeksaver-*
+          artifacts: dist/gofileserver-*
           # release 正文
           #bodyFile: "body.md"
