chore(build): 更新构建输出文件名
- 将所有平台的输出文件名前缀从 gofileserver 更改为 fileserver
- 保持原有的版本号和平台标识不变
- 更新 GitHub Release 上传路径以匹配新的文件名
- 确保 Android ARM64、Linux AMD64、Windows AMD64、macOS AMD64 和 macOS ARM64
  构建产物命名一致性

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,24 +58,24 @@ jobs:
           # CGO_ENABLED=0: 禁用CGO，生成静态链接的可执行文件（不依赖系统库）
           # -ldflags: 链接时传递的参数，这里将版本号注入到二进制文件中
           # -o: 指定输出文件的路径和名称
-          GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -ldflags "-X github.com/bynow2code/gofileserver/main.version=${{ github.ref_name }}" -o dist/gofileserver-${{ github.ref_name }}-android-arm64 ./main.go
+          GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -ldflags "-X github.com/bynow2code/gofileserver/main.version=${{ github.ref_name }}" -o dist/fileserver-${{ github.ref_name }}-android-arm64 ./main.go
           
           # 编译 Linux amd64 版本（适用于大多数Linux服务器和桌面系统）
           # GOARCH=amd64: 目标CPU架构为x86_64（64位Intel/AMD处理器）
-          GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -ldflags "-X github.com/bynow2code/gofileserver/main.version=${{ github.ref_name }}" -o dist/gofileserver-${{ github.ref_name }}-linux-amd64 ./main.go
+          GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -ldflags "-X github.com/bynow2code/gofileserver/main.version=${{ github.ref_name }}" -o dist/fileserver-${{ github.ref_name }}-linux-amd64 ./main.go
           
           # 编译 Windows amd64 版本（适用于Windows 10/11等64位系统）
           # GOOS=windows: 目标操作系统为Windows
           # 输出文件会自动添加.exe扩展名
-          GOOS=windows GOARCH=amd64 CGO_ENABLED=0 go build -ldflags "-X github.com/bynow2code/gofileserver/main.version=${{ github.ref_name }}" -o dist/gofileserver-${{ github.ref_name }}-windows-amd64.exe ./main.go
+          GOOS=windows GOARCH=amd64 CGO_ENABLED=0 go build -ldflags "-X github.com/bynow2code/gofileserver/main.version=${{ github.ref_name }}" -o dist/fileserver-${{ github.ref_name }}-windows-amd64.exe ./main.go
           
           # 编译 macOS amd64 版本（适用于Intel芯片的Mac电脑）
           # GOOS=darwin: 目标操作系统为macOS
-          GOOS=darwin GOARCH=amd64 CGO_ENABLED=0 go build -ldflags "-X github.com/bynow2code/gofileserver/main.version=${{ github.ref_name }}" -o dist/gofileserver-${{ github.ref_name }}-macos-amd64 ./main.go
+          GOOS=darwin GOARCH=amd64 CGO_ENABLED=0 go build -ldflags "-X github.com/bynow2code/gofileserver/main.version=${{ github.ref_name }}" -o dist/fileserver-${{ github.ref_name }}-macos-amd64 ./main.go
           
           # 编译 macOS arm64 版本（适用于Apple Silicon芯片的Mac电脑：M1/M2/M3等）
           # GOARCH=arm64: 目标CPU架构为ARM64（Apple Silicon）
-          GOOS=darwin GOARCH=arm64 CGO_ENABLED=0 go build -ldflags "-X github.com/bynow2code/gofileserver/main.version=${{ github.ref_name }}" -o dist/gofileserver-${{ github.ref_name }}-macos-arm64 ./main.go
+          GOOS=darwin GOARCH=arm64 CGO_ENABLED=0 go build -ldflags "-X github.com/bynow2code/gofileserver/main.version=${{ github.ref_name }}" -o dist/fileserver-${{ github.ref_name }}-macos-arm64 ./main.go
 
       # 步骤4：在GitHub上创建Release并上传编译好的文件
       - name: 创建 Github Release
@@ -87,6 +87,6 @@ jobs:
           # release title（Release的标题，在Releases页面显示的名称）
           name: Release ${{ github.ref_name }}
           # 上传打包后的文件（要上传到Release中的文件路径，支持通配符匹配）
-          artifacts: dist/gofileserver-*
+          artifacts: dist/fileserver-*
           # release 正文（Release的详细说明文件，可选）
           #bodyFile: "body.md"
